erDiagram
    USERS {
        int user_id PK
        string username
        string email
        string password_hash
        datetime created_at
        datetime updated_at
    }

    MEDIA {
        int media_id PK
        string title
        string description
        string genre
        string media_type
        int release_year
        string director
        string cast
        datetime created_at
        datetime updated_at
    }

    RATINGS {
        int rating_id PK
        int user_id FK
        int media_id FK
        int rating_value
        string comment
        boolean confirmed
        datetime created_at
        datetime updated_at
    }

    FAVORITES {
        int favorite_id PK
        int user_id FK
        int media_id FK
        datetime created_at
    }

    RATING_LIKES {
        int rating_like_id PK
        int rating_id FK
        int user_id FK
        datetime created_at
    }

    %% Präzisere, deutschsprachige Beschriftungen mit Multiplizitäten und FK-Hinweis
    USERS ||--o{ RATINGS : "1:N (erstellt)"
    USERS ||--o{ FAVORITES : "1:N (favorisiert)"
    USERS ||--o{ RATING_LIKES : "1:N (liked)"
    MEDIA ||--o{ RATINGS : "1:N (bewertet)"
    MEDIA ||--o{ FAVORITES : "1:N (ist Favorit)"
    RATINGS ||--o{ RATING_LIKES : "1:N (erhält Likes)"
